--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *bz2 filter=lfs diff=lfs merge=lfs -text
 training/datasets/* filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+visualization/*.tsv filter=lfs diff=lfs merge=lfs -text
